--- a/resources/assets/js/ui/LibraryBoard.scss
+++ b/resources/assets/js/ui/LibraryBoard.scss
@@ -43,6 +43,7 @@
   }
 }
 .LibraryBoard__display {
+  display: flex;
   padding: 80px;
   background-image: /* tint image */ linear-gradient(
       to right,
